// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown component snapshot 1`] = `
Array [
  "test-content",
  <span />,
]
`;

exports[`OutlineButton component snapshot 1`] = `
Array [
  <button
    className="chakra-button css-1bex62d"
    type="button"
  />,
  <span />,
]
`;
